jena-owl2: add `*TRANS_INF` & `*RDFS_INF` tests to `OntClassSuperClassesTest` & `OntIndividualClassesTest` & `OntModelClassesTest` & `OntModelPropertiesTest`, other minor changes