@@ -8,15 +8,23 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class OntModelClassesTest {
 
+    @SuppressWarnings("ExtractMethodRecommender")
     @ParameterizedTest
     @EnumSource(names = {
             "OWL2_DL_MEM_RDFS_BUILTIN_INF",
             "OWL2_MEM",
+            "OWL2_MEM_RDFS_INF",
+            "OWL2_MEM_TRANS_INF",
+            "OWL1_MEM",
+            "OWL1_MEM_RDFS_INF",
+            "OWL1_MEM_TRANS_INF",
     })
     public void testListClasses1a(TestSpec spec) {
         OntModel m = RDFIOTestUtils.readResourceToModel(
@@ -29,28 +37,12 @@ public class OntModelClassesTest {
         // there is DataHasValue Restriction in the RDF,
         //  but connected property (`owl:onProperty`) has no `owl:DatatypeProperty`
         //  declaration (it is declared as bar `rdf:Property`),
-        //  so in strict mode such construction cannot be considered as a valid class expression
-        List<String> expected = List.of("A", "B", "C", "D", "E", "X0", "X1", "Y0", "Y1", "Z");
-        Assertions.assertEquals(expected, actual);
-    }
-
-    @ParameterizedTest
-    @EnumSource(names = {
-            "OWL1_MEM",
-    })
-    public void testListClasses1b(TestSpec spec) {
-        OntModel m = RDFIOTestUtils.readResourceToModel(
-                OntModelFactory.createModel(spec.inst), "/list-syntax-categories-test.rdf", Lang.RDFXML
-        );
-        List<String> actual = m.ontObjects(OntClass.class)
-                .map(it -> it.isAnon() ? "null" : it.getLocalName())
-                .sorted()
-                .collect(Collectors.toList());
-        // there is DataHasValue Restriction in the RDF,
-        //  but connected property (`owl:onProperty`) has no `owl:DatatypeProperty`
-        //  declaration (it is declared as bar `rdf:Property`),
-        //  anyway this is correct for OWL1 (compatibility with org.apache.jena.ontology.OntModel)
-        List<String> expected = List.of("A", "B", "C", "D", "E", "X0", "X1", "Y0", "Y1", "Z", "null");
+        //  so in strict mode such construction cannot be considered as a valid class expression;
+        //  for OWL1 this is correct for compatibility with org.apache.jena.ontology.OntModel
+        List<String> expected = new ArrayList<>(Arrays.asList("A", "B", "C", "D", "E", "X0", "X1", "Y0", "Y1", "Z"));
+        if (!spec.inst.getPersonality().getName().startsWith("OWL2")) {
+            expected.add("null");
+        }
         Assertions.assertEquals(expected, actual);
     }
 
@@ -69,31 +61,22 @@ public class OntModelClassesTest {
     @EnumSource(names = {
             "OWL2_DL_MEM_RDFS_BUILTIN_INF",
             "OWL2_MEM",
+            "OWL2_MEM_RDFS_INF",
+            "OWL2_MEM_TRANS_INF",
+            "OWL1_MEM",
+            "OWL1_MEM_RDFS_INF",
+            "OWL1_MEM_TRANS_INF",
     })
     public void testListClasses2a(TestSpec spec) {
         OntModel m = TestModelFactory.withBuiltIns(
                 RDFIOTestUtils.readResourceToModel(
                         OntModelFactory.createModel(spec.inst), "/list-syntax-categories-test-with-import.rdf", Lang.RDFXML
                 ));
-        List<String> expected = List.of("A", "B", "C", "D", "E", "Nothing", "Thing", "X0", "X1", "Y0", "Y1", "Z", "null");
-        List<String> actual = m.ontObjects(OntClass.class)
-                .map(it -> it.isAnon() ? "null" : it.getLocalName())
-                .sorted()
-                .collect(Collectors.toList());
-        Assertions.assertEquals(expected, actual);
-    }
-
-    @ParameterizedTest
-    @EnumSource(names = {
-            "OWL1_MEM",
-    })
-    public void testListClasses2b(TestSpec spec) {
-        OntModel m = TestModelFactory.withBuiltIns(
-                RDFIOTestUtils.readResourceToModel(
-                        OntModelFactory.createModel(spec.inst), "/list-syntax-categories-test-with-import.rdf", Lang.RDFXML
-                ));
-        List<String> expected = List.of("A", "B", "C", "D", "E", "Nothing", "Thing", "X0", "X1", "Y0", "Y1", "Z", "null", "null");
-        List<String> actual = m.ontObjects(OntClass.class)
+        List<String> expected = new ArrayList<>(Arrays.asList("A", "B", "C", "D", "E", "Nothing", "Thing", "X0", "X1", "Y0", "Y1", "Z", "null"));
+        if (!spec.inst.getPersonality().getName().equals("OWL2")) {
+            expected.add("null");
+        }
+        List<String> actual = m.ontObjects(OntClass.class).distinct()
                 .map(it -> it.isAnon() ? "null" : it.getLocalName())
                 .sorted()
                 .collect(Collectors.toList());
@@ -104,7 +87,11 @@ public class OntModelClassesTest {
     @EnumSource(names = {
             "OWL2_DL_MEM_RDFS_BUILTIN_INF",
             "OWL2_MEM",
+            "OWL2_MEM_RDFS_INF",
+            "OWL2_MEM_TRANS_INF",
             "OWL1_MEM",
+            "OWL1_MEM_RDFS_INF",
+            "OWL1_MEM_TRANS_INF",
     })
     public void testListClasses3a(TestSpec spec) {
         OntModel m = RDFIOTestUtils.readResourceToModel(
@@ -125,7 +112,7 @@ public class OntModelClassesTest {
     @EnumSource(names = {
             "RDFS_MEM",
     })
-    public void testListClasses3b(TestSpec spec) {
+    public void testListClasses3c(TestSpec spec) {
         OntModel m = RDFIOTestUtils.readResourceToModel(
                 OntModelFactory.createModel(spec.inst), "/list-syntax-categories-test-comps.rdf", Lang.RDFXML
         );
